fixed vertical alignment in IE11

--- a/src/less/framework/hero.less
+++ b/src/less/framework/hero.less
@@ -3,6 +3,9 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    // `height` is required for content to be
+    // correctly vertically aligned in IE11
+    height: 100vh;
     min-height: 100vh;
     // .avatar {
     //     margin-bottom: 1rem;
